@@ -1,0 +1,9 @@
+# SPDX-FileCopyrightText: 2024 Shun Sakai
+#
+# SPDX-License-Identifier: Apache-2.0 OR MIT
+
+[tool.bumpversion]
+current_version = "0.11.6"
+
+[[tool.bumpversion.files]]
+glob = "docs/man/man1/*.1.adoc"
