@@ -14,6 +14,13 @@ All notable changes to this project will be documented in this file.
 The format is based on https://keepachangelog.com/[Keep a Changelog], and this
 project adheres to https://semver.org/[Semantic Versioning].
 
+== {compare-url}/v0.11.6\...HEAD[Unreleased]
+
+=== Changed
+
+* Description of options which depends on the features are always available
+  ({pull-request-url}/689[#689])
+
 == {compare-url}/v0.11.5\...v0.11.6[0.11.6] - 2024-10-29
 
 === Added
